feat: create project and select annotations
